--- a/app/views/favourites/index.html.erb
+++ b/app/views/favourites/index.html.erb
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="btn-container">
-          <a ng-click="go_to_listing(o_listing.id)" class="btn">View Property</a>
+          <a ng-click="go_to_listing(o_listing.slug)" class="btn">View Property</a>
         </div>
       </div>
     </div>
