--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -50,7 +50,7 @@
             <h2 class="gold price">{{o_listing.lp_dol ? (o_listing.lp_dol | currency : "$CAD ").slice(0, -3) : "--"}}</h2>
 
             <div class="text-xsmall vspace">Ice is a way of life, it is at once urban and classic</div>
-            <a class="btn btn-gold" href="/listings/{{o_listing.id}}">More Information</a>
+            <a class="btn btn-gold" href="/listings/{{o_listing.slug}}">More Information</a>
           </div>
         </div>
         <hr>
@@ -121,7 +121,7 @@
                     </div>
                   </div>
                   <div class="btn-container">
-                    <a ng-click="go_to_listing(o_listing.id)" class="btn">View Property</a>
+                    <a ng-click="go_to_listing(o_listing.slug)" class="btn">View Property</a>
                   </div>
                 </div>
               </li>
