--- a/app/views/prospect_matches/index.html.erb
+++ b/app/views/prospect_matches/index.html.erb
@@ -52,7 +52,7 @@
   <h3 ng-show="listings.length == 0">You have not favourited any listings yet</h3>
   <div class="row" ng-repeat="group in listings">
     <div class="col-md-3 col-sm-6" ng-repeat="o_listing in group">
-      <div class="property-item" ng-click="go_to_listing(o_listing.id)">
+      <div class="property-item" ng-click="go_to_listing(o_listing.slug)">
         <figure><div class="img-container"><img ng-src="http://icecondos.s3.amazonaws.com/listing_photos/listing_{{o_listing.id}}_0.jpg" onerror="this.onerror=null;this.src='/missing-image.png';"></div></figure>
         <div class="property-attr">
           <div class="row">
