--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,8 +6,8 @@
       </div>
     </div>
     <div class="button-bar text-center">
-      <a href="buyers.html" class="btn btn-gold text-uppercase">Buyers</a>
-      <a href="renters.html" class="btn btn-gold text-uppercase">Renters</a>
+      <a href="/listings" class="btn btn-gold text-uppercase">Buyers</a>
+      <a href="/listings?rent=1" class="btn btn-gold text-uppercase">Renters</a>
 
       <div class="row">
         <div class="col-sm-8 col-sm-push-2 col-md-6 col-md-push-3 text-center">
