--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,9 @@
 <footer>
   <% if params[:controller] == "home" && params[:action] == "index" %>
+    <div style="position: relative; top: 56px; z-index: 1;">
+      <a href="#" id="scroll-page-top" class="center-block" style="width: 50px; display: none;"><%= image_tag "icons/up.png", width: "50", height: "49" %></a>
+      <a href="#" id="scroll-page-down" class="center-block" style="width: 50px; display: none;"><%= image_tag "icons/down.png", width: "50", height: "49" %></a>
+    </div>
     <div class="row hidden-xs logos">
       <div class="col-sm-6">
   			<%= image_tag "footer-left.png", width: "207", height: "56" %>
@@ -7,11 +11,6 @@
       <div class="col-sm-6">
   			<%= image_tag "footer-right.png", width: "250", height: "56", class: "pull-right" %>
       </div>
-    </div>
-
-    <div style="position: relative; top: -56px;">
-      <a href="#" id="scroll-page-top" class="center-block" style="width: 50px"><%= image_tag "icons/up.png", width: "50", height: "49" %></a>
-      <a href="#" id="scroll-page-down" class="center-block" style="width: 50px"><%= image_tag "icons/down.png", width: "50", height: "49" %></a>
     </div>
   <% end %>
 
