--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -164,8 +164,8 @@
             <%= image_tag "logo.png", width: "75", height: "29", class: "pull-left", style: "margin-top: -6px;" %>
             <span class="xsmall-font pull-left" style="line-height: 29px">TORONTO’S MOST LUXURIOUS CONDOMINIUMS</span></div>
         </div>
-        <a href="buyers.html" class="btn btn-gold text-uppercase">Buyers</a>
-        <a href="renters.html" class="btn btn-gold text-uppercase">Renters</a>
+        <a href="/listings" class="btn btn-gold text-uppercase">Buyers</a>
+        <a href="/listings?rent=1" class="btn btn-gold text-uppercase">Renters</a>
       </div>
       <div class="center-block" style="padding-bottom: 20px;">
         <%= image_tag "footer-left.png", width: "207", height: "56", style: "padding-right: 40px;" %>
