--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -13,19 +13,19 @@
     <div class="col-md-12 about-row-1">
       <div class="container">
         <div class="row">
-          <div class="col-md-5 col-md-offset-1">
+          <div class="col-md-6">
             <span class="gold">OUR GOAL IS TO PROVIDE YOU WITH PERSONAL AND COMPREHENSIVE SERVICES WHEN PURCHASING YOUR NEW HOME.</span>
           </div>
         </div>
         <br>
         <br>
         <div class="row">
-          <div class="col-md-5 col-md-offset-1">
+          <div class="col-md-6">
             <p class="about-content">
               “Congratulations on your decision to move to the Greater Toronto Area. It is a friendly community with an affordable standard of living and reasonably priced housing. You will also appreciate the diverse cosmopolitan opportunities you would typically find in a much larger metropolitan areas of the world”
             </p>
           </div>
-          <div class="col-md-4 col-md-offset-1">
+          <div class="col-md-5 col-md-offset-1">
             <span style="font-size:16px;">MARTIN IS COMMITTED TO:</span><br>
             <hr style="border-color: #333;">
             <br>
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-5 col-md-offset-1">
+          <div class="col-md-6">
             <%= image_tag "about-img-1.png", class: "img-responsive" %>
           </div>
         </div>
