--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,7 @@
     </div>
     <div class="button-bar text-center">
       <a href="/listings" class="btn btn-gold text-uppercase">Buyers</a>
+      <a href="/listings" class="btn btn-gold text-uppercase">Sellers</a>
       <a href="/listings?rent=1" class="btn btn-gold text-uppercase">Renters</a>
 
       <div class="row">
@@ -165,6 +166,7 @@
             <span class="xsmall-font pull-left" style="line-height: 29px">TORONTO’S MOST LUXURIOUS CONDOMINIUMS</span></div>
         </div>
         <a href="/listings" class="btn btn-gold text-uppercase">Buyers</a>
+        <a href="/listings" class="btn btn-gold text-uppercase">Sellers</a>
         <a href="/listings?rent=1" class="btn btn-gold text-uppercase">Renters</a>
       </div>
       <div class="center-block" style="padding-bottom: 20px;">
