--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer>
   <% if params[:controller] == "home" && params[:action] == "index" %>
     <div style="position: relative; top: 56px; z-index: 1;">
-      <a href="#" id="scroll-page-top" class="center-block" style="width: 50px; display: none;"><%= image_tag "icons/up.png", width: "50", height: "49" %></a>
-      <a href="#" id="scroll-page-down" class="center-block" style="width: 50px; display: none;"><%= image_tag "icons/down.png", width: "50", height: "49" %></a>
+      <a href="#" id="scroll-page-top" class="center-block bounce" style="width: 50px; display: none;"><%= image_tag "icons/up.png", width: "50", height: "49" %></a>
+      <a href="#" id="scroll-page-down" class="center-block bounce" style="width: 50px; display: none;"><%= image_tag "icons/down.png", width: "50", height: "49" %></a>
     </div>
     <div class="row hidden-xs logos">
       <div class="col-sm-6">
@@ -18,9 +18,9 @@
     <hr>
 
     <div class="row">
-      <div class="col-xs-6">12 YORK ST, TORONTO, ON M5J 0A9, CANADA</div>
+      <div class="col-xs-6">12 &amp; 14 YORK ST, TORONTO, ON, CANADA</div>
       <div class="col-xs-6">
-        <div class="pull-right">© 2015. ALL RIGTHS RESERVED <a href="#">TERMS OF USE</a> <a href="#">PRIVACY</a></div>
+        <div class="pull-right">© 2015. ALL RIGHTS RESERVED</div>
       </div>
     </div>
   </div>
