--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -40,6 +40,63 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@mixin animation($animate...) {
+    $max: length($animate);
+    $animations: '';
+
+    @for $i from 1 through $max {
+        $animations: #{$animations + nth($animate, $i)};
+
+        @if $i < $max {
+            $animations: #{$animations + ", "};
+        }
+    }
+    -webkit-animation: $animations;
+    -moz-animation:    $animations;
+    -o-animation:      $animations;
+    animation:         $animations;
+}
+
+@mixin keyframes($animationName) {
+    @-webkit-keyframes #{$animationName} {
+        @content;
+    }
+    @-moz-keyframes #{$animationName} {
+        @content;
+    }
+    @-o-keyframes #{$animationName} {
+        @content;
+    }
+    @keyframes #{$animationName} {
+        @content;
+    }
+}
+
+@mixin transform($transforms) {
+	   -moz-transform: $transforms;
+	     -o-transform: $transforms;
+	    -ms-transform: $transforms;
+	-webkit-transform: $transforms;
+          transform: $transforms;
+}
+
+@include keyframes(bounce) {
+	0%, 20%, 50%, 80%, 100% {
+    @include transform(translateY(0));
+  }
+	40% {
+    @include transform(translateY(-30px));
+  }
+	60% {
+    @include transform(translateY(-15px));
+  }
+}
+
+.bounce {
+  @include animation(bounce 2s infinite);
+}
+
 /*!
  * Bootstrap v3.3.5 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
@@ -4836,6 +4893,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #f8f8f8;
   border-color: #e7e7e7;
 }
+.navbar-default .navbar-header {
+  padding: 15px 0;
+}
+.navbar-default .navbar-nav {
+  padding: 15px 0;
+}
+
 .navbar-default .navbar-brand {
   color: #777777;
 }
@@ -7625,7 +7689,7 @@ div.social a {
   visibility: hidden;
 }
 body#buyer {
-  padding-top: 44px;
+  padding-top: 80px;
 }
 body#buyer section {
   padding-bottom: 60px;
@@ -7824,12 +7888,6 @@ hr.gold {
 }
 
 .about-row-1 {
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  background-position: top center;
-  background-image: asset-url('about-bg-1.png');
 }
 .about-row-2 {
   -webkit-background-size: cover;
@@ -7839,3 +7897,26 @@ hr.gold {
   background-position: top center;
   background-image: asset-url('about-bg-2.png');
 }
+
+body.nav-open{overflow-y:visible;}
+
+.hamburger{width:30px;height:10px;background-color:transparent;border:0;position:relative;display:inline-block;}
+.hamburger > span, .hamburger > span:before, .hamburger > span:after {
+cursor: pointer;border-radius: 1px;height: 4px;width: 30px;background: white;position: absolute;display: block;content: '';
+transition: all 500ms ease-in-out;-webkit-transition: all 500ms ease-in-out;}
+.hamburger > span{top:3px;}
+.hamburger > span:before {top: -8px;}
+.hamburger > span:after {bottom: -8px; }
+.active .hamburger > span{background-color: transparent;}
+.active .hamburger > span:before, .active .hamburger > span:after {top: 0;}
+.active .hamburger > span:before {transform: rotate(45deg);-webkit-transform: rotate(45deg);-moz-transform: rotate(45deg);-ms-transform: rotate(45deg);-o-transform: rotate(45deg);}
+.active .hamburger > span:after {transform: rotate(-45deg);-webkit-transform: rotate(-45deg);-moz-transform: rotate(-45deg);-ms-transform: rotate(-45deg);-o-transform: rotate(-45deg);}
+
+
+.nav-menu{width:280px;position:fixed;top:81px;bottom:0;background-color:#111;z-index:1030;box-shadow:-1px 0 2px rgba(0,0,0,.2);-webkit-box-shadow:-1px 0 2px rgba(0,0,0,.2);padding:10px 25px 10px 25px;text-align: right;
+right: -100%;-webkit-transition: all 350ms;transition: all 350ms;}
+.nav-menu .nav > li > a{font-size: 16px;font-family: 'proxima_novasemibold';color: #c4b257;border-bottom:1px solid #eae9e6;line-height: 20px;padding-right:5px;background-color:transparent!important;}
+.nav-menu .nav > li > a.text-primary{color:#ff6f20;border-bottom-width:3px;}
+.nav-menu .nav > li > .nav > li > a, .nav-menu .nav > li.assub > a{font-size: 11px;}
+body.nav-open{overflow-y:visible;}
+.nav-menu.show {visibility: visible !important;right: 0;-webkit-transition: all 350ms;transition: all 350ms}
