--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,8 @@
       <div class="header-content-inner">
         <!-- nothing yet -->
       </div>
-    </div>
+    </div>    
+    <%= render "layouts/flash_messages" %>
     <div class="button-bar text-center">
       <a href="/listings" class="btn btn-gold text-uppercase">Buyers</a>
       <a href="/listings" class="btn btn-gold text-uppercase">Sellers</a>
