--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,22 +1,29 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="main-container">
+	<div class="about-us">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4">
+					<div class="devise_box">
+	          <center class="title">Change your password</center><br>
+            <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+              <%= devise_error_messages! %>
+              <%= f.hidden_field :reset_password_token %>
+              <div class="form-group">
+                <%= f.password_field :password, autofocus: true, autocomplete: "off", placeholder: "New Password", class: "form-control"  %>
+	            </div>
+              <div class="form-group">
+                <%= f.password_field :password_confirmation, autofocus: true, autocomplete: "off", placeholder: "Confirm Password", class: "form-control"  %>
+	            </div>
+              <div class="actions">
+                <%= f.submit "RESET PASSWORD", class: "btn btn-block btn-gold" %>
+              </div>
+              <br>
+							<hr style="margin-top:0;">
+							<center>Don't have an account? <%= link_to "Sign up", new_registration_path(resource_name), class: "gold" %></center>
+            <% end %>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
