--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,25 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="main-container">
+	<div class="about-us">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4">
+					<div class="devise_box">
+	          <center class="title">Forgot your password?</center><br>
+            <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+              <%= devise_error_messages! %>
+              <div class="form-group">
+	              <%= f.email_field :email, placeholder: "Email Address", class: "form-control" %>
+	            </div>
+              <div class="actions">
+                <%= f.submit "RESET PASSWORD", class: "btn btn-block btn-gold" %>
+              </div>
+              <br>
+							<hr style="margin-top:0;">
+							<center>Don't have an account? <%= link_to "Sign up", new_registration_path(resource_name), class: "gold" %></center>
+            <% end %>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
