--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,89 +2,52 @@
 	<div class="about-us">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-12">
-					<div class="page-title">
-						<h1><center>Please, login or register to continue</center></h1>
+				<div class="col-md-4 col-md-offset-4">
+					<div class="devise_box">
+	          <%- if devise_mapping.omniauthable? %>
+	            <%- resource_class.omniauth_providers.each do |provider| %>
+	              <%= link_to "#{provider.to_s == 'facebook' ? 'FACEBOOK LOGIN' : provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), class: "btn btn-block facebook-btn" %><br />
+	            <% end -%>
+	          <% end -%>
+						<p class="login-separator">
+							<span>OR</span>
+						</p>
+
+						<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+	            <%= devise_error_messages! %>
+	          	<div class="row">
+	            	<div class="col-sm-6">
+	                	<div class="form-group">
+	                    <%= f.text_field :first_name, autofocus: true, placeholder: "First Name", class: "form-control" %>
+	                  </div>
+	                </div>
+	            	<div class="col-sm-6">
+	                	<div class="form-group">
+	                    <%= f.text_field :last_name, placeholder: "Last Name", class: "form-control" %>
+	                    </div>
+	                </div>
+	            </div>
+
+	            <div class="form-group">
+	              <%= f.email_field :email, placeholder: "Email Address", class: "form-control" %>
+	            </div>
+
+	            <div class="form-group">
+	              <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
+	            </div>
+
+	            <div class="form-group">
+	              <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password Confirmation", class: "form-control" %>
+	            </div>
+
+	            <div class="actions">
+	              <%= f.submit "SIGN UP", class: "btn btn-block btn-gold" %>
+	            </div>
+							<br>
+							<hr style="margin-top:0;">
+							<center>Already have an account? <%= link_to "Sign In", new_session_path(resource_name), class: "gold" %></center>
+	          <% end %>
 					</div>
-				</div>
-				<div class="col-sm-4 col-sm-offset-1 login-form">
-          <h5>EXISTING ACCOUNT</h5>
-          <hr>
-          <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-            <div class="form-group">
-              <%= f.email_field :email, placeholder: "Email Address", class: "form-control" %>
-            </div>
-            <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-              <%= link_to "Forgot your password?", new_password_path(resource_name), style: "font-size:14px;", class: "pull-right" %><br />
-            <% end -%>
-            <div class="form-group">
-              <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
-            </div>
-
-            <% if devise_mapping.rememberable? -%>
-              <div class="form-group">
-                <%= f.check_box :remember_me %>
-                <%= f.label :remember_me, "Remember my Account", style: "font-weight:100;" %>
-              </div>
-            <% end -%>
-
-            <div class="actions">
-              <%= f.submit "Log in", class: "btn btn-alter btn-lg pull-right" %>
-            </div>
-          <% end %>
-
-          <%- if devise_mapping.omniauthable? %>
-            <%- resource_class.omniauth_providers.each do |provider| %>
-              <%= link_to "Sign in with #{provider.to_s == 'google_oauth2' ? 'Google' : provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
-            <% end -%>
-          <% end -%>
-				</div>
-        <div class="col-sm-4 col-sm-offset-2 login-form">
-          <h5>REGISTER FOR FREE</h5>
-          <hr>
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-            <%= devise_error_messages! %>
-
-          	<div class="row">
-            	<div class="col-sm-6">
-                	<div class="form-group">
-                    <%= f.text_field :first_name, autofocus: true, placeholder: "First Name", class: "form-control" %>
-                  </div>
-                </div>
-            	<div class="col-sm-6">
-                	<div class="form-group">
-                    <%= f.text_field :last_name, placeholder: "Last Name", class: "form-control" %>
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-              <%= f.email_field :email, placeholder: "Email Address", class: "form-control" %>
-            </div>
-
-            <div class="form-group">
-              <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
-            </div>
-
-            <div class="form-group">
-              <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password Confirmation", class: "form-control" %>
-            </div>
-
-            <div class="actions">
-              <%= f.submit "Sign up", class: "btn btn-alter btn-lg pull-right" %>
-            </div>
-          <% end %>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="welcome-container">
-		<div class="container">
-			<div class="welcome">
-				<div class="info">
-					<h1>Ice Condos is a boutique like real estate agent servicing the Ajax and Pickering Market.</h1>
-					<p>Ice Condos is a boutique like real estate agent servicing the Ajax and Pickering Market. As a young, up and coming Real Estate agent Ice Condos.</p>
-					<a href="/contact" class="btn">Contact Ice Condos</a>
 				</div>
 			</div>
 		</div>
