--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -28,108 +28,93 @@
 
 <% unless user_signed_in? %>
   <div class="modal fade" id="modal-login" tabindex="-1" role="dialog">
-    	<div class="modal-dialog">
-      	<div class="modal-content">
-        		<div class="modal-header icon-user">
-          		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          		<h4 class="modal-title">SIGN IN</h4>
-        		</div>
-        		<div class="modal-body">
-              <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-                <div class="box-grey">
-                  <div class="form-group">
-                    <%= f.email_field :email, placeholder: "Email Address", class: "form-control" %>
-                  </div>
-
-                  <div class="form-group">
-                    <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
-                  </div>
-
-                  <% if devise_mapping.rememberable? -%>
-                    <div class="form-group pull-left">
-                      <%= f.check_box :remember_me %>
-                      <%= f.label :remember_me %>
-                    </div>
-                  <% end -%>
-                  <div class="pull-right">
-                    <%- if devise_mapping.omniauthable? %>
-                      <%- resource_class.omniauth_providers.each do |provider| %>
-                        <%= link_to "Sign in with #{provider.to_s == 'google_oauth2' ? 'Google' : provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
-                      <% end -%>
-                    <% end -%>
-                  </div>
-                  <div class="clearfix"></div>
-                </div>
-                <div class="row">
-                	<div class="col-sm-3">
-                    <%= f.submit "SIGN IN", class: "btn btn-primary btn-block" %>
-                  </div>
-                  <div class="col-sm-9 text-right-center">
-                  	<a href="#" class="btn btn-link" data-toggle="signup">NEED AN ACCOUNT? <span class="fa fa-arrow-right"></span></a>
-                  </div>
-                </div>
-              <% end %>
-        		</div>
-      	</div>
+    	<div class="modal-dialog modal-sm">
+          <div class="devise_box">
+	          <%- if devise_mapping.omniauthable? %>
+	            <%- resource_class.omniauth_providers.each do |provider| %>
+	              <%= link_to "#{provider.to_s == 'facebook' ? 'FACEBOOK LOGIN' : provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), class: "btn btn-block facebook-btn" %><br />
+	            <% end -%>
+	          <% end -%>
+						<p class="login-separator">
+							<span>OR</span>
+						</p>
+						<%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+	            <%= devise_error_messages! %>
+	            <div class="form-group">
+	              <%= f.email_field :email, placeholder: "Email Address", class: "form-control" %>
+	            </div>
+	            <div class="form-group">
+	              <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
+	            </div>
+							<div class="actions">
+	              <%= f.submit "SIGN IN", class: "btn btn-gold btn-block" %>
+	            </div>
+							<br>
+	            <% if devise_mapping.rememberable? -%>
+	              <div class="form-group pull-left">
+	                <%= f.check_box :remember_me %>
+	                <%= f.label :remember_me, "Remember", style: "font-weight:100;" %>
+	              </div>
+	            <% end -%>
+	            <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+	              <%= link_to "Forgot your password?", new_password_path(resource_name), style: "font-size:14px;", class: "pull-right gold" %><br />
+	            <% end -%>
+							<div class="clearfix"></div>
+							<hr style="margin-top:0;">
+							<center>Don't have an account? <a href="#" class="gold" data-toggle="signup">Sign up</a></center>
+	          <% end %>
+					</div>
     	</div>
   </div>
 
   <div class="modal fade" id="modal-signup" tabindex="-1" role="dialog">
-    	<div class="modal-dialog">
-      	<div class="modal-content">
-        		<div class="modal-header icon-user">
-          		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          		<h4 class="modal-title">SIGN UP</h4>
-        		</div>
-        		<div class="modal-body">
-                <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-                	<div class="box-grey">
-                    <div class="form-group">
-                      <%= f.email_field :email, placeholder: "Email Address", class: "form-control" %>
-                    </div>
-                    <div class="row">
-                    	<div class="col-sm-6">
-                      	<div class="form-group">
-                          <%= f.text_field :first_name, autofocus: true, placeholder: "First Name", class: "form-control" %>
-                        </div>
-                      </div>
-                    	<div class="col-sm-6">
-                      	<div class="form-group">
-                          <%= f.text_field :last_name, placeholder: "Last Name", class: "form-control" %>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row">
-                    	<div class="col-sm-6">
-                      	<div class="form-group">
-                          <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
-                        </div>
-                      </div>
-                    	<div class="col-sm-6">
-                      	<div class="form-group">
-                        	<div class="fz10">A password must be eight characters including one uppercase letter, one special character and alphanumeric characters. </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row">
-                    	<div class="col-sm-6">
-                    		<%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password Confirmation", class: "form-control" %>
-                      </div>
-                    </div>
-                    <hr>
-                    <div class="fz11">By registering you agree to Terms of Service and Privacy Policy</div>
+    	<div class="modal-dialog modal-sm">
+        <div class="devise_box">
+          <%- if devise_mapping.omniauthable? %>
+            <%- resource_class.omniauth_providers.each do |provider| %>
+              <%= link_to "#{provider.to_s == 'facebook' ? 'FACEBOOK LOGIN' : provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), class: "btn btn-block facebook-btn" %><br />
+            <% end -%>
+          <% end -%>
+          <p class="login-separator">
+            <span>OR</span>
+          </p>
+
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= devise_error_messages! %>
+            <div class="row">
+              <div class="col-sm-6">
+                  <div class="form-group">
+                    <%= f.text_field :first_name, autofocus: true, placeholder: "First Name", class: "form-control" %>
                   </div>
-                  <div class="row">
-                    <div class="col-sm-9">
-                    	<a href="#" class="btn btn-link" data-toggle="login"><span class="fa fa-arrow-left"></span> BACK TO SIGN IN?</a>
+                </div>
+              <div class="col-sm-6">
+                  <div class="form-group">
+                    <%= f.text_field :last_name, placeholder: "Last Name", class: "form-control" %>
                     </div>
-                  	<div class="col-sm-3">
-                      <%= f.submit "SING UP", class: "btn btn-primary btn-block" %>
-                    </div>
-                  </div>
-                <% end %>
-        		</div>
-      	</div>
+                </div>
+            </div>
+
+            <div class="form-group">
+              <%= f.email_field :email, placeholder: "Email Address", class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password Confirmation", class: "form-control" %>
+            </div>
+
+            <div class="actions">
+              <%= f.submit "SIGN UP", class: "btn btn-block btn-gold" %>
+            </div>
+            <br>
+            <hr style="margin-top:0;">
+            <center>Already have an account? <%= link_to "Sign In", "#", class: "gold", "data-toggle" => "login" %></center>
+          <% end %>
+        </div>
+      	
     	</div>
   </div>
 <% end %>
