--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,13 @@
         <% l.menu_items.each do |m| %>
           <li class="visible-xs"><%= link_to m.title, m.url %></li>
         <% end if l %>
+        <% if user_signed_in? %>
+          <li><%= link_to "Favourites", favourites_path %></li>
+          <li><%= link_to "My Account", my_account_path %></li>
+          <li><%= link_to('Log Out', destroy_user_session_path, :method => :delete) %></li>
+        <% else %>
+          <li><a href="#modal-login" data-toggle="modal">LOG IN</a></li>
+        <% end %>
         <li>
           <a href="#" class="menu-toggle hidden-xs">
             <div class="hamburger">
