--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -30,7 +30,7 @@
             <h3>Unit #{{o_listing.unit_num}}<br>Floor {{o_listing.stories}}</h3>
           </div>
           <div class="col-sm-3">
-            <div class="alert-info">NEW</div>
+            <div class="alert-info" ng-show="o_listing.created_at > ('<%= 48.hours.ago %>' | date)">NEW</div>
           </div>
           <div class="col-sm-12">
             <hr>
