--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -22,12 +22,14 @@
 
     <div class="condo" ng-repeat="o_listing in listings">
       <div class="col-md-5">
-        <img ng-src="{{o_listing.main_image}}" onerror="this.onerror=null;this.src='/missing-image.png';" class="img-responsive">
+        <a class="gold" href="/listings/{{o_listing.slug}}">
+          <img ng-src="{{o_listing.main_image}}" onerror="this.onerror=null;this.src='/missing-image.png';" class="img-responsive">
+        </a>
       </div>
       <div class="col-md-7">
         <div class="row">
           <div class="col-sm-9">
-            <h3>Unit #{{o_listing.unit_num}}<br>Floor {{o_listing.stories}}</h3>
+            <h3><a class="gold" href="/listings/{{o_listing.slug}}">Unit #{{o_listing.unit_num}}</a><br>Floor {{o_listing.stories}}</h3>
           </div>
           <div class="col-sm-3">
             <div class="alert-info" ng-show="o_listing.created_at > ('<%= 48.hours.ago %>' | date)">NEW</div>
@@ -68,11 +70,12 @@
       <%= image_tag "footer-left.png", width: "207", height: "56" %>
     </div>
     <div class="col-sm-6">
-      <%= image_tag "footer-right.png", width: "250", height: "56", class: "pull-right" %>
+      <%= link_to image_tag("footer-right2.png", width: "150", height: "56"), "http://www.mississauga-realestate.com/", target: "_blank", class: "pull-right" %>
+      <%= link_to image_tag("footer-right1.png", width: "100", height: "56"), "http://www.cloudrealty.ca", target: "_blank", class: "pull-right" %>
     </div>
   </div>
 
-  <div style="position: relative; top: -56px;">
+  <div style="position: relative; top: -56px; width:50px; left: 50%; margin-left: -25px;">
     <a href="#page-top" class="center-block page-scroll" style="width: 50px"><%= image_tag "icons/up.png", width: "50", height: "49" %></a>
   </div>
 </section>
