--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -79,15 +79,15 @@
             <hr>
             <br>
             <div class="row listing_social">
-              <div class="col-md-5">
+              <div class="col-md-6">
                 <% if current_user && current_user.favourited?(@listing.id) %>
-                  <a href="" disabled="disabled">FAVOURITED</a>
+                  <i class="fa fa-heart"></i>FAVOURITED
                 <% else %>
-                  <a href="" ng-click="add_favourite(<%= @listing.id %>)" id="favourite">SAVE AS FAVOURITE</a>
+                  <a href="" ng-click="add_favourite(<%= @listing.id %>)" id="favourite"><i class="fa fa-heart-o"></i><i class="fa fa-heart"></i><span>SAVE AS FAVOURITE</span></a>
                 <% end %>
               </div>
-              <div class="col-md-7">
-                SHARE WITH FRIENDS&nbsp;&nbsp;
+              <div class="col-md-6" style="text-align:right;">
+                SHARE &nbsp;&nbsp;
                 <a href="#"><%= image_tag "icons/twitter.png", height: "16", width: "16", alt: "Twitter" %></a>
                 <a href="#"><%= image_tag "icons/facebook.png", height: "16", width: "16", alt: "Facebook" %></a>
               </div>
@@ -138,7 +138,7 @@
                         ROOM
                       </th>
                       <th>
-                        SIZE  <span style="border: 2px solid #fff;padding:1px 4px;">FT</span>
+                        SIZE  <span style="border: 2px solid #fff;padding:1px 4px;"><a ng-click="change_size()" id="floor_size_link">FT</a></span>
                       </th>
                       <th>
                         LEVEL
@@ -151,7 +151,7 @@
                   <tbody style="color:#999;">
                     <tr ng-repeat="i in [1,2,3,4,5,6,7,8,9,10,11,12]" ng-show="listing['rm'+i+'_out']">
                       <td>{{listing['rm'+i+'_out']}}</td>
-                      <td>{{listing['rm'+i+'_len']*3.28 || "--"}} x {{listing['rm'+i+'_wth']*3.28 || "--"}}</td>
+                      <td>{{listing['rm'+i+'_len']*size_multiplier || "--"}} x {{listing['rm'+i+'_wth']*size_multiplier || "--"}}</td>
                       <td>{{listing['level'+i] || "--"}}</td>
                       <td>{{listing['rm'+i+'_dc1_out'] ? listing['rm'+i+'_dc1_out']+";" : ""}} {{listing['rm'+i+'_dc2_out'] ? listing['rm'+i+'_dc2_out']+";" : ""}} {{listing['rm'+i+'_dc3_out'] ? listing['rm'+i+'_dc3_out']+";" : ""}}</td>
                     </tr>
@@ -262,11 +262,12 @@
       <%= image_tag "footer-left.png", width: "207", height: "56" %>
     </div>
     <div class="col-sm-6">
-      <%= image_tag "footer-right.png", width: "250", height: "56", class: "pull-right" %>
+      <%= link_to image_tag("footer-right2.png", width: "150", height: "56"), "http://www.mississauga-realestate.com/", target: "_blank", class: "pull-right" %>
+      <%= link_to image_tag("footer-right1.png", width: "100", height: "56"), "http://www.cloudrealty.ca", target: "_blank", class: "pull-right" %>
     </div>
   </div>
 
-  <div style="position: relative; top: -56px;">
+  <div style="position: relative; top: -56px; width:50px; left: 50%; margin-left: -25px;">
     <a href="#page-top" class="center-block page-scroll" style="width: 50px"><%= image_tag "icons/up.png", width: "50", height: "49" %></a>
   </div>
 
